--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/imageScaler.css">
-    <script src="js/imageScaler.min.js"></script>
+    <script src="js/imageScaler.js"></script>
 </head>
 
 <body>
